<resources>
    <string name="app_name">Virtuwallet</string>
    <string name="info">Convert Currency on the Spot and Keep Track of Your Funds During Your Travels with Virtuwallet!</string>
    <string name="manage">Manage Wallets</string>

    <string name="add">Add Wallet</string>
    <string name="add_request">What currency would you like to make a wallet for?</string>
    <string name="from_hint">From...</string>
    <string name="to_hint">To...</string>
    <string name="balance_hint">Balance</string>
    <string name="name_hint">Name</string>
    <string name="make">Make Wallet</string>

    <string name="to">to</string>
    <string name="convert">Convert</string>
    <string name="deposit">Deposit</string>
    <string name="withdraw">Withdraw</string>
    <string name="delete">Delete Wallet</string>

    <string-array name="themes">
        <item>White</item>
        <item>Blue</item>
        <item>Green</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
