<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ser210.quinnipiac.edu.virtuwallet.AddWalletActivity">

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/add_request"/>

    <TextView
        android:id="@+id/fromHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearance"
        android:layout_below="@+id/question"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="15dp"
        android:text="@string/from_hint"/>

    <Spinner
        android:id="@+id/fromSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/question"
        android:layout_toRightOf="@+id/fromHint"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/toHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearance"
        android:layout_below="@+id/fromHint"
        android:layout_marginTop="26dp"
        android:layout_marginLeft="15dp"
        android:text="@string/to_hint"/>

    <Spinner
        android:id="@+id/toSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/toHint"
        android:layout_below="@+id/fromSpinner"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        />

    <TextView
    android:id="@+id/balanceHint"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:textAppearance"
    android:layout_below="@+id/toHint"
    android:layout_marginTop="35dp"
    android:layout_marginLeft="15dp"
    android:text="@string/balance_hint"/>

    <EditText
        android:id="@+id/balanceEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toSpinner"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="0dp"
        android:layout_toRightOf="@+id/toHint"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/nameHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearance"
        android:layout_below="@+id/balanceHint"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="15dp"
        android:text="@string/name_hint"/>

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/balanceEditText"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="0dp"
        android:layout_toRightOf="@+id/toHint"
        android:inputType="text" />

    <Button
        android:id="@+id/createButton"
        android:theme="@style/AppTheme.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:layout_below="@+id/nameEditText"
        />


</RelativeLayout>
