<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewWalletFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/walletName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="40dp"
            android:text="WALLET NAME"
            android:textAppearance="?android:textAppearanceLarge" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/fromAmount"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:textAppearance="?android:textAppearanceLarge" />

            <TextView
                android:id="@+id/fromCurrency"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:text="FROM CURR"
                android:textAppearance="?android:textAppearanceLarge" />

        </LinearLayout>

        <TextView
            android:id="@+id/TO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/to"
            android:textAppearance="?android:textAppearanceLarge" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/toAmount"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="0"
                android:textAppearance="?android:textAppearanceLarge" />

            <TextView
                android:id="@+id/toCurrency"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="TO CURRENCY"
                android:textAppearance="?android:textAppearanceLarge" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/balanceText"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="Balance: "
                android:textAppearance="?android:textAppearanceLarge" />

            <TextView
                android:id="@+id/walletBalance"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="0"
                android:textAppearance="?android:textAppearanceLarge" />

        </LinearLayout>

        <Button
            android:id="@+id/convertButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="30dp"
            android:text="@string/convert"
            android:theme="@style/AppTheme.Button" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/withdrawButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="85dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:text="@string/withdraw"
                android:theme="@style/AppTheme.Button" />

            <Button
                android:id="@+id/depositButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/deposit"
                android:theme="@style/AppTheme.Button" />

        </LinearLayout>

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/delete"
            android:theme="@style/AppTheme.Button" />

    </LinearLayout>

</FrameLayout>